# ethtool

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  aclocal.m4  at76c50x-usb.c  configure  configure.ac  e1000.c  et131x.c  ethtool-bitops.h  ethtool-config.h.in  ethtool-copy.h  ethtool-util.h  ethtool.8  ethtool.8.in  ethtool.c  ethtool.spec.in  fec_8xx.c  ibm_emac.c  igb.c  index.html  internal.h  ixgb.c  ixgbe.c  ixgbevf.c  marvell.c  params.json  pcnet32.c  realtek.c  rxclass.c  sfc.c  sfpdiag.c  sfpid.c  skge.c  smsc911x.c  stmmac.c  test-cmdline.c  test-common.c  (+3 more)
autom4te.cache/: output.1  requests  traces.0  traces.1
